syntax = "proto3";

package spine.validation.bound;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.validation.bound";
option java_outer_classname = "FieldViewsProto";
option java_multiple_files = true;

import "spine/validation/bound/numeric_bound.proto";
import "spine/compiler/ast.proto";
import "spine/compiler/file.proto";

// A view of a field that is marked with `(range)` option.
message RangeField {
    option (entity).kind = PROJECTION;
    option (is).java_type = "io.spine.validation.BoundedFieldView";

    compiler.FieldRef id = 1;

    // The field in which the option was discovered.
    compiler.Field subject = 2;

    // The error message template.
    string error_message = 3;

    // The range value.
    string range = 4;

    // The minimum value that a numeric field can have.
    spine.validation.bound.NumericBound lower_bound = 5;

    // The maximum value that a numeric field can have.
    spine.validation.bound.NumericBound upper_bound = 6;

    // The file in which the option was discovered.
    compiler.File file = 7;
}

// A view of a field that is marked with `(max)` option.
message MaxField {
    option (entity).kind = PROJECTION;
    option (is).java_type = "io.spine.validation.BoundedFieldView";

    compiler.FieldRef id = 1;

    // The field in which the option was discovered.
    compiler.Field subject = 2;

    // The error message template.
    string error_message = 3;

    // The max value, as was specified by a user.
    string max = 4;

    // The maximum value that a numeric field can have.
    spine.validation.bound.NumericBound bound = 5;

    // The file in which the option was discovered.
    compiler.File file = 6;
}

// A view of a field that is marked with `(min)` option.
message MinField {
    option (entity).kind = PROJECTION;
    option (is).java_type = "io.spine.validation.BoundedFieldView";

    compiler.FieldRef id = 1;

    // The field in which the option was discovered.
    compiler.Field subject = 2;

    // The error message template.
    string error_message = 3;

    // The min value, as was specified by a user.
    string min = 4;

    // The minimum value that a numeric field can have.
    spine.validation.bound.NumericBound bound = 5;

    // The file in which the option was discovered.
    compiler.File file = 6;
}
